# brume

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Cargo.toml  DEVELOPPERS.md  Dockerfile  README.md  brm.sh  compose.yaml  docker-compose.yml  go.work  go.work.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.gc.toml
agent/: .air.toml  .gitignore  Dockerfile.dev  README.md  agent.toml  go.mod  go.sum
agent/cmd/: main.go
agent/collector/: collector.service.go  get-collector.sh  otel-bin.go  otel.yaml
agent/collector/fx/: collector.fx.go
agent/container/docker/: docker.client.go  docker.runner.go
agent/container/fx/: container.module.go
agent/container/interfaces/: container.interface.go
agent/health/: health.service.go
agent/health/fx/: health.fx.go
agent/internal/config/: env.go
agent/internal/db/: db.go
agent/internal/injection/: fx.go
agent/internal/intercom/: communication.service.go
agent/internal/log/: logger.go
agent/job/: job.service.go
agent/job/fx/: job.fx.go
agent/job/model/: job.model.go
agent/runner/: runner.interface.go  runner.service.go
agent/runner/fx/: runner.fx.go
agent/runner/interface/: runner.interface.go
agent/ticker/: ticker.fx.go
brume/: .air-agent.toml  .air-node.toml  .air.toml  .gitignore  Dockerfile.dev  Makefile  brume.toml  brume.toml.example  buf.gen.yaml  go.mod  go.sum
brume/account/org/: org.model.go  org.service.go
brume/account/user/: user.model.go  user.service.go
brume/builder/fx/: builder.fx.go
brume/builder/model/: builder.model.go
brume/builder/service/: builder.service.go
brume/cli/: main.go
brume/client/v1/: authn.go  client.go  orgs.go
brume/cloud/account/: cloud-account.service.go
brume/cloud/aws/: aws.service.go
brume/cmd/brume/: main.go
brume/cmd/master/: main.go
brume/container/: container.activity.go
brume/container/docker/: docker.activity.go  docker.service.go
brume/container/fx/: container.module.go
brume/deployment/: deployment.service.go
brume/deployment/fx/: deployment.module.go
brume/deployment/model/: deployment.model.go
brume/deployment/workflow/: deployment.workflow.go
brume/events/: bus.go  channel.go
brume/executor/: docker.executor.go  executor.service.go
brume/executor/fx/: executor.module.go
brume/executor/model/: executor.model.go
brume/injection/: fx.go
brume/internal/clickhouse/: clickhouse.go
brume/internal/cmd/: client.go  login.go  master.go  node.go  org.go  project.go  root.go
brume/internal/common/: authentification.service.go  token.service.go
brume/internal/config/: env.go  logs.go
brume/internal/ctx/: context.go
brume/internal/db/: clickhouse.go  db.go  logger.go  orm.go  seed.go
brume/internal/durable/: durable.go
brume/internal/injection/: fx.go
brume/internal/log/: logger.go
brume/internal/otel/: metrics.go  prometheus.go
brume/internal/proto/: buf.yaml
brume/internal/redis/: redis.go
brume/internal/router/: main_grpc.go
brume/internal/server/: authentification.go  organization.go  token.go
brume/internal/temporal/: client.go
brume/internal/ticker/: ticker.fx.go
brume/internal/utils/: utils.go
brume/logs/: log.activity.go  log.service.go
brume/machine/: machine.service.go
brume/org/: model.go
brume/project/: project.activity.go  project.service.go
brume/proto/: base.proto  organization.proto
brume/runner/: docker.runner.go  runner.service.go
brume/service/: service.go  service.service.go
brume/services/: service.go
brume/stack/: architecture.md  assume-role.json  stack.service.go
bruno/: 01-health.bru  02-list-plans.bru  02-refresh-token.bru  02-reuse-refresh-token.bru  02-revoked-refresh-family.bru  03-show-plan.bru  04-make-public.bru  05-old-plan-url.bru  05-pin-plan.bru  05-serve-public-plan.bru  06-unpin-plan.bru  07-prepare-deletion.bru  08-confirm-deletion.bru  09-tunnel-get.bru  10-tunnel-post.bru  11-tunnel-stream.bru  12-tunnel-offline.bru  13-tunnel-local-failure.bru  14-tunnel-root.bru  15-deployment-index.bru  16-deployment-spa-fallback.bru  17-deployment-missing-asset.bru  18-deployment-asset.bru  18-old-public-urls.bru  18-old-tunnel-url.bru  19-api-host-isolation.bru  19-auth-host-isolation.bru  19-wildcard-path-isolation.bru  20-generated-deployment.bru  21-generated-tunnel.bru  bruno.json
bruno/Brume/: bruno.json
bruno/environments/: Local.bru
builder/: go.mod  go.sum
builder/cmd/: main.go
builder/template/: spa.interface.go
console/: .eslintrc.cjs  .prettierrc  Dockerfile.dev  README.md  biome.json  biome.jsonc  codegen.ts  components.json  index.html  package.json  pnpm-lock.yaml  relay.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
console/src/: App.tsx  index.css  main.tsx
crates/: build_metadata.rs
crates/brume-api-client/: Cargo.toml
crates/brume-api-client/src/: lib.rs
crates/brume-cli/: Cargo.toml  build.rs
crates/brume-cli/src/: archive.rs  config.rs  embedded.rs  main.rs  output.rs  preview.rs  renderer.rs  tunnel.rs
crates/brume-core/: Cargo.toml
crates/brume-mcp/: Cargo.toml
crates/brume-mcp/src/: lib.rs
crates/brume-server/: Cargo.toml  build.rs
crates/brume-server/src/: auth.rs  config.rs  deployments.rs  error.rs  gc.rs  main.rs  plans.rs  public.rs  state.rs  storage.rs  tunnels.rs  util.rs  web.rs
docs/: README.md  architecture.md  concepts.md  development.md  docs.json  introduction.mdx
docs/architecture/: bid.mdx  observability.mdx  overview.mdx
docs/reference/: cli.md  configuration.md
fixtures/example-deployment/: index.html
fixtures/example-plan/: architecture.md  brume.toml  index.mdx
infra/: Dockerfile.dev  otel-ingest.yaml  pgadmin-servers.json
migrations/: 0001_initial.sql  0002_static_deployments.sql  0003_wildcard_routing_and_tokens.sql  0004_remove_legacy_tokens.sql
renderer/: package.json  tsconfig.json  vite.config.ts
scripts/: build-all.sh  build-cli.sh  build-metadata.sh  build-renderer.sh  build-server.sh  check-tunnel-websocket.ts  e2e-bruno.sh  tunnel-fixture.ts
(+287 files in other folders)
