[package]
name = "brume-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
brume-api-client = { path = "../brume-api-client" }
brume-core = { path = "../brume-core" }
rmcp.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true

