[package]
name = "brume-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
ammonia.workspace = true
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
axum.workspace = true
base64.workspace = true
brume-core = { path = "../brume-core" }
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
mime_guess.workspace = true
percent-encoding.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
tar.workspace = true
tempfile.workspace = true
tokio.workspace = true
tower-cookies.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
urlencoding.workspace = true
uuid.workspace = true
zstd.workspace = true

[build-dependencies]
anyhow.workspace = true
